# AReaL

./: pyproject.toml  pyproject.vllm.toml
areal/api/: cli_args.py  reward_api.py
areal/engine/: fsdp_engine.py  megatron_engine.py  sglang_remote.py  vllm_remote.py
areal/engine/fsdp_utils/: grad_cosine.py
areal/engine/megatron_utils/: checkpointer.py  grad_cosine.py
areal/experimental/inference_service/controller/: controller.py
areal/infra/: workflow_executor.py
areal/infra/controller/: rollout_controller.py
areal/infra/scheduler/: slurm.py
areal/reward/: __init__.py
areal/trainer/ppo/: actor.py
examples/math/: gsm8k_grpo.yaml  gsm8k_m2po.yaml
tests/: test_async_rollout_metrics.py  test_engine_clear_batches.py  test_fsdp_grad_cosine.py  test_math_verify_reward.py  test_megatron_async_save.py  test_megatron_checkpointer.py  test_megatron_grad_cosine.py  test_ppo_grad_cosine_summary.py  test_prox_approx.py  test_reward_api.py  test_slurm_scheduler.py
tests/experimental/inference_service/: test_sglang_multinode.py
